Updated contact and keybase verification

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,22 +21,22 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: glenzac[at]gmail[dot]com
-phone: 888 888 88 88
+phone: 
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
+  street: 
+  city: 
+  region: 
+  postcode: 
+  country: 
+  country_code: 
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
+  latitude:
+  longitude: 
 directions:
 office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+  - ''
+  - ''
+appointment_url: ''
 contact_links:
   - icon: twitter
     icon_pack: fab
@@ -45,7 +45,7 @@ contact_links:
   - icon: skype
     icon_pack: fab
     name: Skype Me
-    link: 'skype:echo123?call'
+    link: ''
   - icon: keybase
     icon_pack: fab
     name: Chat on Keybase
